pas2js: cleaned up pcu
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40554 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/pas2js/pas2js.lpi
+++ b/utils/pas2js/pas2js.lpi
@@ -34,6 +34,7 @@
       <Unit1>
         <Filename Value="../../packages/pastojs/src/pas2jspcucompiler.pp"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="Pas2JSPCUCompiler"/>
       </Unit1>
       <Unit2>
         <Filename Value="../../packages/pastojs/src/pas2jscompilercfg.pp"/>
@@ -42,6 +43,7 @@
       <Unit3>
         <Filename Value="../../packages/pastojs/src/pas2jsfs.pp"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="Pas2JSFS"/>
       </Unit3>
       <Unit4>
         <Filename Value="../../packages/pastojs/src/pas2jscompilerpp.pp"/>
@@ -50,6 +52,7 @@
       <Unit5>
         <Filename Value="../../packages/pastojs/src/pas2jsfscompiler.pp"/>
         <IsPartOfProject Value="True"/>
+        <UnitName Value="Pas2JSFSCompiler"/>
       </Unit5>
     </Units>
   </ProjectOptions>
