* Added the tsvn:projectlanguage property to force English spell checker in TortoiseSVN.
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40587 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-/ svnc_svnmerge_002dintegrated svnc_fisheye_002eaccess=allow svnc_bugtraq_003aurl svnc_bugtraq_003alogregex svn_global_002dignores
+/ svnc_tsvn_003aprojectlanguage=1033 svnc_svnmerge_002dintegrated svnc_fisheye_002eaccess=allow svnc_bugtraq_003aurl svnc_bugtraq_003alogregex svn_global_002dignores
 /Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 /compiler svnc_svnmerge_002dintegrated
