--- a/.gitattributes
+++ b/.gitattributes
@@ -7884,6 +7884,7 @@ packages/sqlite/src/sqlite3.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle
 packages/sqlite/src/sqlite3.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/sqlite/src/sqlite3db.pas svn_mimetype=text%2Fx-pascal svn_mime_002dtype=text%2Fx-pascal svn_eol_002dstyle=native
 packages/sqlite/src/sqlite3dyn.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/sqlite/src/sqlite3ext.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/sqlite/src/sqlitedb.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/sqlite/tests/test.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/sqlite/tests/testapiv3x.README svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
