* (modified) patch by Gareth Moreton: Speed improvement in case blocks, resolves #0034762 This patch improves the compiler where "case" statements are concerned, using jump tables more often and creating more efficient machine code in some situations:   * If a case block only contains one branch (not including the else block), the initial range check is removed, since this becomes wasted effort.   * If the else block is empty, the else label is set to the end label - though this doesn't decrease the code size, it takes a bit of strain off the peephole optimizer.   * On -O2 and above, some node analysis is now done on the branch labels. Most of the time this just redirects it to the end     label for empty blocks, but if the block contains a goto statement, it will redirect it to its destination instead,     thus increasing performance by not having multiple jumps (this won't get picked up by the peephole optimiser if the label addresses are in a jump table).   * Some checks now use what I call the 'true count' rather than the 'label count'. The true count includes each     individual value in a range - for example, 0..2 counts as 3. This increases the chance that a jump table will be     utilised in situations where it is more efficient than a linear list.   * For jump tables, if the case block almost covers the entire range (32 entries or fewer from full coverage),     the initial range check is removed and the gaps included in the jump table (pointing to the else label).
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40676 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -10884,6 +10884,7 @@ tests/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/bansi1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/bansi1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/bansi1mt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/bench/bcase.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/bench/blists1.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/blists1.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/bench/bmd5.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
