--- a/.gitattributes
+++ b/.gitattributes
@@ -7803,6 +7803,7 @@ packages/rtl-objpas/src/x86_64/invoke.inc svn_mime_002dtype=text%2Fplain svn_eol
 packages/rtl-objpas/tests/testrunner.rtlobjpas.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/rtl-objpas/tests/tests.rtti.invoke.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/rtl-objpas/tests/tests.rtti.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/rtl-objpas/tests/tests.rtti.util.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/rtl-unicode/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-unicode/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-unicode/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
