--- a/.gitattributes
+++ b/.gitattributes
@@ -7801,6 +7801,7 @@ packages/rtl-objpas/src/inc/widestrutils.pp svn_mime_002dtype=text%2Fplain svn_e
 packages/rtl-objpas/src/win/varutils.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-objpas/src/x86_64/invoke.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-objpas/tests/testrunner.rtlobjpas.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
+packages/rtl-objpas/tests/tests.rtti.impl.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/rtl-objpas/tests/tests.rtti.invoke.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 packages/rtl-objpas/tests/tests.rtti.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/rtl-objpas/tests/tests.rtti.util.pas svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
