* pass -meabi=5 when calling the assembler in the linux rtl Makefile, non-eabi target are not supported for years already, so this should cause little problems
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40738 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/rtl/linux/Makefile
+++ b/rtl/linux/Makefile
@@ -3857,6 +3857,7 @@ ifeq ($(ARCH),arm)
     ASTARGET+=-mthumb --def __thumb__=1
     ARMTHUMB=1
   endif
+  ASTARGET+= -meabi=5
 endif
 prt0$(OEXT) : $(ARCH)/prt0.as
 	$(MAKE) $(COMPILER_UNITTARGETDIR)
