haiku: pascal sysinit code for haiku, will be needed for x86_64, nice to have for i386
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40754 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9631,6 +9631,8 @@ rtl/haiku/pthread.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/ptypes.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/rtldefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/settimeo.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/haiku/si_c.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/haiku/si_dllc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/signal.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/suuid.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/syscall.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
