--- a/rtl/haiku/Makefile.fpc
+++ b/rtl/haiku/Makefile.fpc
@@ -6,13 +6,13 @@
 main=rtl
 
 [target]
-loaders=prt0 cprt0 dllcprt0 func dllprt
-units=system uuchar baseunix unixtype ctypes objpas macpas iso7185 extpas strings \
+loaders=$(LOADERS)
+units=system $(SYSINITUNITS) uuchar baseunix unixtype ctypes objpas macpas iso7185 extpas strings \
 #      beos \
       errors dos dl \
       sysconst sysutils \
       types charset cpall character typinfo classes fgl math \
-      cpu mmx getopts heaptrc lineinfo lnfodwrf \
+      cpu $(CPUUNITS) getopts heaptrc lineinfo lnfodwrf \
       rtlconsts syscall unix unixutil termio initc \
       cmem \
       dynlibs cwstring cthreads \
@@ -59,8 +59,16 @@ INC=$(RTL)/inc
 PROCINC=$(RTL)/$(CPU_TARGET)
 UNIXINC=$(RTL)/unix
 HAIKUINC=$(RTL)/haiku
-
+LOADERS=prt0 cprt0 dllcprt0 func dllprt
+CPUUNITS=mmx
+SYSINITUNITS=si_c si_dllc
 UNITPREFIX=rtl
+
+ifeq ($(ARCH),x86_64)
+override LOADERS=
+override CPUUNITS=
+endif
+
 
 # Use new feature from 1.0.5 version
 # that generates release PPU files
@@ -68,8 +76,7 @@ UNITPREFIX=rtl
 ifdef RELEASE
 override FPCOPT+=-Ur
 endif
-
-override FPCOPT+= -dHASUNIX -n -dFPC_USE_LIBC -Si
+override FPCOPT+=-dFPC_USE_LIBC
 
 # Paths
 OBJPASDIR=$(RTL)/objpas
