* Rework SSL handling to be pluggable, add HTTPS support to fphttpserver
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40769 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -2606,6 +2606,7 @@ packages/fcl-net/src/netware/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_
 packages/fcl-net/src/netwlibc/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-net/src/os2/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-net/src/resolve.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/fcl-net/src/sslbase.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-net/src/sslsockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-net/src/ssockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/fcl-net/src/unix/resolve.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -6912,6 +6913,7 @@ packages/openssl/examples/test1.pas svn_mime_002dtype=text%2Fplain svn_eol_002ds
 packages/openssl/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/openssl/src/fpopenssl.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/openssl/src/openssl.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/openssl/src/opensslsockets.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/oracle/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/oracle/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/oracle/Makefile.fpc.fpcmake svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
