* moved around/replaced the following procedures to stop nflw from depending     on pdecsub (node units should not depend on parser units):    o maybe_add_public_default_java_constructor()    o handle_calling_convention()    o create_finalizer_procdef() (replaced with create_outline_procdef())    o insert_record_hidden_paras()    o handle_calling_convention()    o proc_add_definition()    o build_parentfpstruct()    o maybe_guarantee_record_typesym()    o get_first_proc_str()   * factored out the creation of a procinfo for a nested procdef based on a     subnodetree of the current procdef into tprocinfo.create_for_outlining()
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40773 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -652,6 +652,7 @@ compiler/ppcx64.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/ppcx64llvm.lpi svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/ppheap.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/ppu.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+compiler/procdefutil.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/procinfo.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/pstatmnt.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 compiler/psub.pas svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
