--- a/.gitattributes
+++ b/.gitattributes
@@ -3834,6 +3834,9 @@ packages/gnome1/src/zvt/libzvt.pp svn_mime_002dtype=text%2Fplain svn_eol_002dsty
 packages/gnome1/src/zvt/lists.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnome1/src/zvt/vt.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnome1/src/zvt/vtx.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/gnutls/examples/testgnutls.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/gnutls/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/gnutls/src/gnutls.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/googleapi/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/googleapi/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/googleapi/README.txt svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
