* Sample program from Silvio Clecio to generate server certificate
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40815 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -3838,6 +3838,7 @@ packages/gnutls/Makefile svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/Makefile.fpc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/examples/httpget.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/examples/privkey.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+packages/gnutls/examples/srvcacert.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/examples/testgnutls.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/fpmake.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 packages/gnutls/src/gnutls.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
