--- a/.gitattributes
+++ b/.gitattributes
@@ -9632,6 +9632,7 @@ rtl/haiku/i386/dllprt.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/i386/dllprt.cpp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/i386/func.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/i386/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/haiku/i386/sig_cpu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/i386/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/osdefs.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/osmacro.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -9652,6 +9653,7 @@ rtl/haiku/termios.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/termiosproc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/unxconst.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/unxfunc.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/haiku/x86_64/sig_cpu.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/haiku/x86_64/sighnd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/i386/cpu.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/i386/cpuh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
