morphos: add a custom lineinfo unit, prepared to parse stabs relocations in ELF relocatable objects, also featuring stronger address validation, and showing offsets in the executable instead of absolute addresses
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40854 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -10088,6 +10088,7 @@ rtl/morphos/doslibf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/emuld.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/execd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/execf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+rtl/morphos/lineinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/si_prc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
