* if sub nodes of a commutative node contain conditionally executed nodes, these sub nodes might not be swapped   as this might result in some nodes not being executed, like temp. create nodes with init. code, see e.g. issue 34653, resolves #34653
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@40934 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -16602,6 +16602,7 @@ tests/webtbs/tw3456.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3457.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3460.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw34605.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
+tests/webtbs/tw34653.pp svn_mime_002dtype=text%2Fpascal svn_eol_002dstyle=native
 tests/webtbs/tw3467.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3470.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 tests/webtbs/tw3474.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
