Also use installed ppudump for ppu testing in utils directory
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41076 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -2554,8 +2554,8 @@ ppulogs : $(PPULOGLIST)
 vpath %.ppu $(ALLPPUDIRS)
 vpath %.log-ppu $(ALLPPUDIRS)
 vpath %.rm-log-ppu $(ALLPPUDIRS)
-%.log-ppu : %.ppu ../compiler/utils/ppudump$(EXEEXT)
-	..$(PATHSEP)compiler$(PATHSEP)utils$(PATHSEP)ppudump -VA -M $< > $@
+%.log-ppu : %.ppu
+	ppudump -VA -M $< > $@
 %.rm-log-ppu : %.ppu ../compiler/utils/ppudump$(EXEEXT)
 	-$(RMPROG) $<
 ../compiler/utils/ppudump$(EXEEXT):
