--- a/utils/Makefile.fpc
+++ b/utils/Makefile.fpc
@@ -133,8 +133,9 @@ vpath %.ppu $(ALLPPUDIRS)
 vpath %.log-ppu $(ALLPPUDIRS)
 vpath %.rm-log-ppu $(ALLPPUDIRS)
 
-%.log-ppu : %.ppu ../compiler/utils/ppudump$(EXEEXT)
-	..$(PATHSEP)compiler$(PATHSEP)utils$(PATHSEP)ppudump -VA -M $< > $@
+# Do not try to recompile ppudump, as this does not work if trying to test cross-compiled units
+%.log-ppu : %.ppu
+	ppudump -VA -M $< > $@
 
 %.rm-log-ppu : %.ppu ../compiler/utils/ppudump$(EXEEXT)
 	-$(RMPROG) $<
