amicommon: moved MorphOS-specific lineinfo to amicommon, for upcoming AROS and OS4 support
git-svn-id: http://svn.freepascal.org/svn/fpc/trunk@41091 3ad0048d-3df7-0310-abae-a5850022a9f2

--- a/.gitattributes
+++ b/.gitattributes
@@ -9002,6 +9002,7 @@ rtl/amicommon/README.TXT svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amicommon/athreads.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amicommon/classes.pp svn_mime_002dtype=text%2Fplain svn_eol_002dtype=native svn_eol_002dstyle=native
 rtl/amicommon/dos.pp svn_mime_002dtype=text%2Fplain svn_eol_002dtype=native svn_eol_002dstyle=native
+rtl/amicommon/lineinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amicommon/osdebug.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amicommon/osdebugh.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/amicommon/paramhandling.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
@@ -10089,7 +10090,6 @@ rtl/morphos/doslibf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/emuld.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/execd.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/execf.inc svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
-rtl/morphos/lineinfo.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/prt0.as svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/si_prc.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
 rtl/morphos/system.pp svn_mime_002dtype=text%2Fplain svn_eol_002dstyle=native
